--- a/.github/workflows/main_msdocs-core-sql-xhy.yml
+++ b/.github/workflows/main_msdocs-core-sql-xhy.yml
@@ -29,7 +29,7 @@ jobs:
 
           # List the files where the project should be to help with debugging
       - name: List files in directory
-        run: ls -l DotNetCoreSqlDb/DotNetCoreSqlDb/
+        run: ls -l DotNetCoreSqlDb/
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
